--- a/style.css
+++ b/style.css
@@ -1,6 +1,37 @@
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+p, center, h1, h2, #whereami, ul {
+    color: #e1e4ed;
+}
+
+p {
+    text-align: justify;
+}
+
+#whereami {
+    margin-top: 5%;
+    color: #9fa4d4;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 #myphoto {
     border-radius: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5%;
+    max-width:100%;
+    max-height:100%;
 }
